--- a/_data/skills.yml
+++ b/_data/skills.yml
@@ -3,7 +3,7 @@
       - Kubernetes
       - Linux
       - KVM
-      — Jenkins
+      - Jenkins
       - Prometheus
       - Open-Falcon
       - Zabbix
