--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 #   Main Configs   #
 # ---------------- #
 baseurl:
-url: https://wvalianty.github.io
+url: http://wvalianty.github.io
 date_format: "ordinal"
 title: 威廉
 subtitle: "淡泊明志"
