--- a/_config.yml
+++ b/_config.yml
@@ -124,3 +124,8 @@ simple_jekyll_search:
 # ---------------- #
 #google:
 #    analytics_id: UA-80669434-1
+
+components:
+    side_bar_repo:
+        enabled: true
+        limit: 2
